JSON with composition